k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api
spec:
  replicas: 2 # ★스케일 아웃! 서버를 2대 띄웁니다.
  selector:
    matchLabels:
      app: search-api
  template:
    metadata:
      labels:
        app: search-api
    spec:
      containers:
        - name: sptring-boot
          image: search-engine:v4
          imagePullPolicy: Always
            #imagePullPolicy: IfNotPresent # 로컬(Import한) 이미지를 우선 사용
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: search-api-svc
spec:
  selector:
    app: search-api
  ports:
    - protocol: TCP
      port: 80 # (유지!) Ingress가 여기로 노크합니다.
      targetPort: 8080 # 컨테이너의 8080으로 보냄
  type: ClusterIP # 외부 접속 허용!
