k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-db
  template:
    metadata:
      labels:
        app: search-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: search-db-svc # 앱이 이 이름으로 DB를 찾습니다.
spec:
  selector:
    app: search-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP # 내부에서만 접속 가능 (보안)
